feat: set production URLs as defaults in .env.example

--- a/.env.example
+++ b/.env.example
@@ -5,16 +5,16 @@
 # REQUIRED: Backend Services
 # ==============================================
 # PocketBase URL (user authentication)
-POCKETBASE_URL=http://pocketbase:8090
+POCKETBASE_URL=https://pb.thecouncilai.com
 
 # Control API URL (token management & subscription)
-CONTROL_API_URL=http://control-api:8001
+CONTROL_API_URL=https://api.thecouncilai.com
 
 # Brain API URL (trading signals)
-BRAIN_API_URL=http://brain-api:8080
+BRAIN_API_URL=https://brain.thecouncilai.com
 
 # Centrifugo WebSocket URL (real-time communication)
-CENTRIFUGO_WS_URL=ws://centrifugo:8000/connection/websocket
+CENTRIFUGO_WS_URL=wss://ws.thecouncilai.com/connection/websocket
 
 # ==============================================
 # OPTIONAL: Broker Configuration
