fix: correct production URLs - all under api.thecouncilai.com

--- a/.env.example
+++ b/.env.example
@@ -5,16 +5,16 @@
 # REQUIRED: Backend Services
 # ==============================================
 # PocketBase URL (user authentication)
-POCKETBASE_URL=https://pb.thecouncilai.com
+POCKETBASE_URL=https://api.thecouncilai.com/pb
 
 # Control API URL (token management & subscription)
 CONTROL_API_URL=https://api.thecouncilai.com
 
 # Brain API URL (trading signals)
-BRAIN_API_URL=https://brain.thecouncilai.com
+BRAIN_API_URL=https://api.thecouncilai.com
 
 # Centrifugo WebSocket URL (real-time communication)
-CENTRIFUGO_WS_URL=wss://ws.thecouncilai.com/connection/websocket
+CENTRIFUGO_WS_URL=wss://api.thecouncilai.com/connection/websocket
 
 # ==============================================
 # OPTIONAL: Broker Configuration
